Fixes to legend alignment, legend and marker styling and broke out text in style pane to it's own category

--- a/viz/Apex-Radar/src/index.css
+++ b/viz/Apex-Radar/src/index.css
@@ -14,3 +14,6 @@
  * limitations under the License.
  */
 
+ .apexcharts-legend.position-bottom.apexcharts-align-left, .apexcharts-legend.position-top.apexcharts-align-left, .apexcharts-legend.position-right, .apexcharts-legend.position-left{
+    justify-content: center !important;
+}
